--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Content Include="Starter\Lesson 1\Exercise 1. Physical Markup tags\PhysicalMarkupTags.html" />
     <Content Include="Starter\Lesson 1\Exercise 2. Logical Markup tags\LogicalMarkupTags.html" />
+    <Content Include="Starter\Lesson 1\Exercise 3. Train to make up page\HTML.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
