--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -79,6 +79,7 @@
     <Content Include="Starter\Lesson 2\Exercise 1. Image Map\ImageMap.html" />
     <Content Include="Starter\Lesson 2\Exercise 1. Image Map\img\figure.jpg" />
     <Content Include="Starter\Lesson 2\Exercise 2. Create a table\Table.html" />
+    <Content Include="Starter\Lesson 2\Exercise 3. Create nested list\NestedList.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
