--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -84,6 +84,8 @@
     <Content Include="Starter\Lesson 2\Exercise 3. Create nested list\NestedList.html" />
     <Content Include="Starter\Lesson 3\Exercise 1. Styles\css\style.css" />
     <Content Include="Starter\Lesson 3\Exercise 1. Styles\index.html" />
+    <Content Include="Starter\Lesson 3\Exercise 2. Borders\css\style.css" />
+    <Content Include="Starter\Lesson 3\Exercise 2. Borders\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
