finished exercise 3 in lesson 3 about working with background

--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -86,6 +86,7 @@
     <Content Include="Starter\Lesson 3\Exercise 1. Styles\index.html" />
     <Content Include="Starter\Lesson 3\Exercise 2. Borders\css\style.css" />
     <Content Include="Starter\Lesson 3\Exercise 2. Borders\index.html" />
+    <Content Include="Starter\Lesson 3\Exercise 3. Background\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
