--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -89,6 +89,8 @@
     <Content Include="Starter\Lesson 3\Exercise 2. Borders\css\style.css" />
     <Content Include="Starter\Lesson 3\Exercise 2. Borders\index.html" />
     <Content Include="Starter\Lesson 3\Exercise 3. Background\index.html" />
+    <Content Include="Starter\Lesson 4\Additional exercise about fonts\css\style.css" />
+    <Content Include="Starter\Lesson 4\Additional exercise about fonts\index.html" />
     <Content Include="Starter\Lesson 4\Exercise 1. Pseudoclasses and pseudoelements\css\style.css" />
     <Content Include="Starter\Lesson 4\Exercise 1. Pseudoclasses and pseudoelements\index.html" />
     <Content Include="Web.config" />
@@ -98,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Starter\Lesson 4\Additional exercise about fonts\fonts\Oswald-Regular.ttf" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
