--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -94,6 +94,7 @@
     <Content Include="Starter\Lesson 4\Exercise 1. Pseudoclasses and pseudoelements\css\style.css" />
     <Content Include="Starter\Lesson 4\Exercise 1. Pseudoclasses and pseudoelements\index.html" />
     <Content Include="Starter\Lesson 5\Additional exercise about paragraphs\index.html" />
+    <Content Include="Starter\Lesson 5\Exercise 1. Layout by template block\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
