--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -97,6 +97,7 @@
     <Content Include="Starter\Lesson 5\Exercise 1. Layout by template block\index.html" />
     <Content Include="Starter\Lesson 5\Exercise 1. With bootsrap4\index.html" />
     <Content Include="Starter\Lesson 5\Exercise 2. Layout by template stickers\index.html" />
+    <Content Include="Starter\Lesson 5\Exercise 2. With bootstrap4\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
