--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -100,6 +100,9 @@
     <Content Include="Starter\Lesson 5\Exercise 2. With bootstrap4\index.html" />
     <Content Include="Starter\Lesson 6\Exercise 1. Layout by new semantic tags\css\style.css" />
     <Content Include="Starter\Lesson 6\Exercise 1. Layout by new semantic tags\index.html" />
+    <Content Include="Starter\Lesson 6\Exercise 2. Audio\audio\Vivaldi.mp3" />
+    <Content Include="Starter\Lesson 6\Exercise 2. Audio\audio\Vivaldi.ogg" />
+    <Content Include="Starter\Lesson 6\Exercise 2. Audio\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
