--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -103,6 +103,10 @@
     <Content Include="Starter\Lesson 6\Exercise 2. Audio\audio\Vivaldi.mp3" />
     <Content Include="Starter\Lesson 6\Exercise 2. Audio\audio\Vivaldi.ogg" />
     <Content Include="Starter\Lesson 6\Exercise 2. Audio\index.html" />
+    <Content Include="Starter\Lesson 6\Exercise 3. Video\index.html" />
+    <Content Include="Starter\Lesson 6\Exercise 3. Video\video\vsvideo.mp4" />
+    <Content Include="Starter\Lesson 6\Exercise 3. Video\video\vsvideo.ogg" />
+    <Content Include="Starter\Lesson 6\Exercise 3. Video\video\vsvideo.webm" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
