--- a/Homework/Homework/Homework.csproj
+++ b/Homework/Homework/Homework.csproj
@@ -107,6 +107,7 @@
     <Content Include="Starter\Lesson 6\Exercise 3. Video\video\vsvideo.mp4" />
     <Content Include="Starter\Lesson 6\Exercise 3. Video\video\vsvideo.ogg" />
     <Content Include="Starter\Lesson 6\Exercise 3. Video\video\vsvideo.webm" />
+    <Content Include="Starter\Lesson 7\Additional exercise about form\index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
